## TODO:
## MAKE THIS WORK

# CMake version check
#cmake_minimum_required(VERSION 3.13)

# Create project
#project(retro_raster_lib)

# Set the C++ standard to 20
#set(CMAKE_CXX_STANDARD 20)

# Add the source files
#set(SOURCE_FILES main.cpp)

#find_library(TEST_LIBRARY test_library lib)

#target_link_libraries(cmake_testapp LINK_PUBLIC &{TEST_LIBRARY})

# Add library target with source files listed in SOURCE_FILES variable
#add_library(retro_raster_lib STATIC ${SOURCE_FILES})

# Add build target with test source files listed in TEST_SOURCE_FILES variable
#add_executable(test_window ${TEST_SOURCE_FILES})


